2009-08-09  Tilghman Lesher <tlesher@digium.com>

	* Asterisk 1.6.0.12 released

	* AST-2009-005

2009-06-05  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.0.10 released

2009-06-04  David Vossel <dvossel@digium.com>

	* channels/chan_iax2.c: Additional updates for AST-2009-001

2009-06-04  David Vossel <dvossel@digium.com>

	* channels/chan_iax2.c: REGAUTH loop fix related to AST-2009-001

2009-04-06  Leif Madsen <lmadsen@digium.com>

	* Release Asterisk 1.6.0.9

2009-04-03 16:27 -0500 [r186517]  Mark Michelson <mmichelson@digium.com>

	* Remove an invalid call to free memory.

	  A bad merge from trunk to 1.6.0 meant freeing memory that
	  should not be freed. In trunk, pkt->data is an ast_str, but
	  in 1.6.0, it is allocated in the same chunk of memory as the
	  sip_pkt. This only affects 1.6.0.

	  (closes issue #14819)
	  Reported by: cwolff09

2009-04-02  Leif Madsen <lmadsen@digium.com>

	* Release Asterisk 1.6.0.8

2009-04-02  Tilghman Lesher <tlesher@digium.com>

	* Fix for security issue AST-2009-003

2009-03-30  Leif Madsen <lmadsen@digium.com>

	* Release Asterisk 1.6.0.7

2009-03-19  Leif Madsen <lmadsen@digium.com>

	* Release Asterisk 1.6.0.7-rc2

2009-03-19 15:40 +0000 [r183066-183109]  Joshua Colp <jcolp@digium.com>

	* /, channels/chan_sip.c: Merged revisions 183108 via svnmerge from
	  https://origsvn.digium.com/svn/asterisk/trunk ........ r183108 |
	  file | 2009-03-19 12:37:23 -0300 (Thu, 19 Mar 2009) | 11 lines
	  Improve our triggering of a T38 switchover internally when
	  triggered by a received reinvite. Previously we reached across
	  the channel bridge to get the other party's SIP dialog structure
	  in order to trigger an outgoing reinvite. This is extremely
	  dangerous to do and only works if bridged to another SIP channel.
	  This patch changes this to use the T38 control frame method of
	  requesting a switchover. This change also causes the SIP channel
	  driver to propogate back whether the switchover worked or not